# Snake

./: .vimrc  Base.cmake  CMakeLists.txt  Debug.cmake  External.cmake  README.md  Release.cmake  build.sh  install.sh  run.sh
src/: CMakeLists.txt  kek.cpp
src/abstractions/commands/: Command.hpp
src/abstractions/event_handling/: ExposeEventHandler.hpp  KeyPressHandler.hpp  MouseButtonPressHandler.hpp  MouseMotionHandler.hpp
src/abstractions/ui/: ColorLabel.hpp  Menu.hpp  Object.hpp  TextLabel.hpp  ValuePresenter.hpp  Window.hpp
src/abstractions/values/: RestrictedValue.hpp
src/abstractions/views/: View.hpp
src/anchor_handlers/: CMakeLists.txt  CenterWindowAnchorHandler.cpp  CenterWindowAnchorHandler.hpp
src/color/: CMakeLists.txt  Color.cpp  ColorPallete.cpp  ColorPallete.hpp  ColorScheme.hpp  ColorSchemeID.hpp
src/color/Color/: CMakeLists.txt  Color.cpp  Color.hpp
src/color/ColorPallete/: CMakeLists.txt  ColorPallete.cpp  ColorPallete.hpp
src/commands/: CMakeLists.txt  ChangeView.cpp  ChangeView.hpp  Command.cpp  CreateWindow.cpp  DestroyWindow.cpp  DrawCircle.cpp  DrawRectangle.cpp  DrawText.cpp  ExitApplication.cpp  ExitApplication.hpp  FillCircle.cpp  FillRectangle.cpp  QueryTextHeight.cpp  QueryTextWidth.cpp  QueryWindowAttributes.cpp  QueryWindowFrame.cpp
src/commands/ChangeView/: CMakeLists.txt  ChangeView.cpp  ChangeView.hpp
src/commands/Command/: CMakeLists.txt  Command.cpp  Command.hpp
src/commands/ExitApplication/: CMakeLists.txt  ExitApplication.cpp  ExitApplication.hpp
src/commands/graphics_commands/: CMakeLists.txt  DrawCircle.cpp  DrawCircle.hpp  DrawRectangle.cpp  DrawText.cpp  DrawText.hpp  FillCircle.cpp  FillRectangle.cpp  GraphicsCommand.hpp
src/commands/synchronous_commands/: CMakeLists.txt  QueryTextHeight.cpp  QueryTextHeight.hpp  QueryTextWidth.cpp  QueryTextWidth.hpp  QueryWindowFrame.cpp  QueryWindowFrame.hpp  SynchronousCommand.hpp
src/configuration/: CMakeLists.txt  Settings.cpp  Settings.hpp
src/events/: CMakeLists.txt  EventDispatcher.cpp  EventHandler.cpp
src/events/EventDispatcher/: CMakeLists.txt  EventDispatcher.cpp  EventDispatcher.hpp
src/events/event_handlers/: ClientMessageHandler.hpp  EventHandlingObject.hpp  ExposeEventHandler.hpp  KeyPressHandler.hpp  MouseButtonPressHandler.hpp  MouseMotionHandler.hpp  NoEventHandler.hpp
src/exceptions/: Exceptions.hpp
src/game_objects/: CMakeLists.txt  Food.cpp  FoodGenerator.cpp  Info.cpp  Info.hpp  MovementController.cpp  Snake.cpp  Snake.hpp
src/game_objects/Food/: CMakeLists.txt  Food.cpp  Food.hpp
src/game_objects/FoodGenerator/: CMakeLists.txt  FoodGenerator.cpp  FoodGenerator.hpp
src/game_objects/Info/: CMakeLists.txt  Info.cpp  Info.hpp
src/game_objects/MovementController/: CMakeLists.txt  MovementController.cpp  MovementController.hpp
src/game_objects/Snake/: CMakeLists.txt  Snake.cpp  Snake.hpp
src/geometry/: Point.hpp  Rectangle.hpp  Triangle.hpp
src/helpers/: CMakeLists.txt  Helper.cpp  Helper.hpp
src/include/: XHeaders.hpp
src/include/abstractions/: AlignHandler.hpp  ClientMessageHandler.hpp  ColorLabel.hpp  IEventHandler.hpp  IWindow.hpp  KeyPressHandler.hpp  Menu.hpp  MouseButtonPressHandler.hpp  MouseMotionHandler.hpp  Object.hpp  ObservableValue.hpp  ObservableValuePresenter.hpp  RestrictedValue.hpp  TextLabel.hpp  UI_Object.hpp  ValuePresenter.hpp  View.hpp  Window.hpp  WindowAnchorHandler.hpp
src/include/anchor_handlers/: CenterWindowAnchorHandler.hpp
src/include/color/: Color.hpp  ColorPallete.hpp
src/include/commands/: ChangeView.hpp  Command.hpp  CreateWindow.hpp  DestroyWindow.hpp  DrawCircle.hpp  DrawRectangle.hpp  DrawText.hpp  ExitApplication.hpp  FillCircle.hpp  FillRectangle.hpp  QueryTextHeight.hpp  QueryTextWidth.hpp  QueryWindowAttributes.hpp  QueryWindowFrame.hpp
src/include/configuration/: Settings.hpp
src/include/constants/: Constants.hpp
src/include/events/: EventDispatcher.hpp  EventHandler.hpp
src/include/exceptions/: Exceptions.hpp
src/include/game_objects/: Food.hpp  FoodGenerator.hpp  MovementController.hpp  Snake.hpp
src/include/geometry/: Point.hpp  Rectangle.hpp  Triangle.hpp
src/include/helpers/: Helper.hpp
src/include/interfaces/: IEventHandler.hpp  KeyPressHandler.hpp  (+4 more)
src/test/: CMakeLists.txt  ColorPalleteTest.cpp  ColorTest.cpp  Gtest.cmake  PointTest.cpp  RectangleTest.cpp  RestrictedValueTest.cpp  TimerTest.cpp
src/threads/: CMakeLists.txt  ThreadDispatcher.cpp  ThreadDispatcher.hpp  UI_Event.hpp  UI_EventQueue.cpp  UI_EventQueue.hpp  UI_Thread.cpp  UI_Thread.hpp  XlibThread.cpp  XlibThread.hpp
src/timing/: CMakeLists.txt  Timer.cpp  Timer.hpp
src/ui/: CMakeLists.txt  ColorValuePresenter.cpp  ColorValuePresenter.hpp  ObservableColorValuePresenter.cpp  ObservableIntValuePresenter.cpp  ObservableRestrictedValuePresenter.cpp  ObservableUlongValuePresenter.cpp  RestrictedValuePresenter.hpp  UlongValuePresenter.cpp
src/views/: CMakeLists.txt  GameAbout.cpp  GameAbout.hpp  GameAction.cpp  GameAction.hpp  GameMenu.cpp  GameMenu.hpp  GameNone.cpp  GameNone.hpp  GameOver.cpp  GameOver.hpp  GameSettings.cpp  GameSettings.hpp  ViewFactory.hpp
src/xlib/: CMakeLists.txt  X11_ColorLabel.cpp  X11_ColorizedTextLabel.cpp  X11_ColorizedTextLabel.hpp  X11_Display.cpp  X11_Font.cpp  X11_Menu.cpp  X11_TextLabel.cpp  X11_Window.cpp  XError.hpp  XHandlers.hpp  XHeaders.hpp  XProxy.cpp  XProxy.hpp  XSettings.hpp  XlibWrapper.cpp  XlibWrapper.hpp
test/: CMakeLists.txt  ColorPalleteTest.cpp  ColorTest.cpp  ObservableValueTest.cpp  PointTest.cpp  RectangleTest.cpp  RestrictedValueTest.cpp  TimerTest.cpp
test/abstractions/: CMakeLists.txt
test/color/: CMakeLists.txt  ColorPalleteTest.cpp  ColorTest.cpp
test/commands/: CMakeLists.txt  QueryLockTest.cpp
test/events/: CMakeLists.txt  ClientMessageEventTest.cpp  ExposeEventTest.cpp  KeyPressEventTest.cpp  MouseButtonPressEventTest.cpp  MouseMotionEventTest.cpp
test/game_objects/: CMakeLists.txt
test/geometry/: CMakeLists.txt  PointTest.cpp
test/timing/: CMakeLists.txt  TimerTest.cpp
test/views/: CMakeLists.txt  ViewFactoryTest.cpp
(+185 files in other folders)
